--- a/PPMBACKEND/src/main/resources/application.properties
+++ b/PPMBACKEND/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/ppmtool
 spring.datasource.username=root
 spring.datasource.password=root
 
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=create
